<resources>
    <string name="app_name">QRScanner</string>
    <string name="enter_mobile">Enter Mobile Number</string>
    <string name="mobile">0123456789</string>
    <string name="next">Next</string>
    <string name="verification_code">Verification Code</string>
    <string name="enter_code">Please enter the verification code sent to your mobile number</string>
    <string name="click_to_Scan">Click to Scan</string>
    <string name="qr_text">No Result</string>
    <string name="invalid_phone">Invalid mobile number</string>
    <string name="enter_phone">Please enter mobile number</string>
    <string name="incorrect_otp">Incorrect OTP</string>
    <string name="enter_otp">Please enter OTP</string>
</resources>