<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_app"
    tools:context=".activities.OTPActivity">
    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="80dp"
        android:id="@+id/imgScanner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_qr_scanner"/>
    <TextView
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"
        android:text="@string/verification_code"
        android:textColor="@color/white"
        android:id="@+id/txtVerificationCode"
        app:layout_constraintTop_toBottomOf="@+id/imgScanner"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:layout_marginHorizontal="10dp"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/txtVerificationCode"
        android:id="@+id/txtPleaseEnter"
        android:text="@string/enter_code"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="+919815187258"
        app:layout_constraintTop_toBottomOf="@+id/txtPleaseEnter"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:layout_marginHorizontal="10dp"
        android:textStyle="bold"
        android:id="@+id/txtMobile"
        android:textSize="20sp"/>

    <com.mukesh.OtpView
        android:id="@+id/otp_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMobile"
        app:itemRadius="40dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:itemBackground="@drawable/bg_otp"
        android:textColor="@android:color/black"
        app:itemCount="6" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnNext"
        android:layout_gravity="center_horizontal"
        android:text="@string/next"
        android:textAllCaps="false"
        android:paddingHorizontal="70dp"
        android:paddingVertical="15dp"
        app:layout_constraintTop_toBottomOf="@+id/otp_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_button"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        />
</androidx.constraintlayout.widget.ConstraintLayout>